# zug

./: .dir-locals.el  .gitignore  .travis.yml  BUILD  CMakeLists.txt  README.rst  default.nix  shell.nix
.github/workflows/: test.yml
doc/: CMakeLists.txt  Makefile  conf.py  design.rst  doxygen.config  index.rst  meta.rst  processes.rst  reducing.rst  state.rst  transducer.rst  type-erasure.rst  util.rst
example/: CMakeLists.txt
nix/: zug.nix
test/: CMakeLists.txt  compose.cpp  into.cpp  into_vector.cpp  meta.cpp  reduce.cpp  reductor.cpp  run.cpp  sequence.cpp  spies.hpp  state_traits.cpp  transduce.cpp  util.cpp
test/__inline_var_tests/: CMakeLists.txt  inline_var.cpp
test/__inline_var_tests/resources/: client1.cpp  client1.hpp  client2.cpp  client2.hpp  decl.hpp
test/transducer/: cat.cpp  chain.cpp  count.cpp  cycle.cpp  dedupe.cpp  distinct.cpp  drop.cpp  drop_while.cpp  each.cpp  eager.cpp  enumerate.cpp  filter.cpp  interelave.cpp  interleave.cpp  interpose.cpp  iter.cpp  map.cpp  map_indexed.cpp  mapcat.cpp  partition.cpp  partition_by.cpp  product.cpp  random_sample.cpp  range.cpp  read.cpp  readbuf.cpp  remove.cpp  repeat.cpp  replace.cpp  scan.cpp  sink.cpp  take.cpp  take_nth.cpp  take_while.cpp  transducer.cpp  unzip.cpp  write.cpp  writebuf.cpp  zip.cpp
tools/travis/: ssh-key.enc  ssh-key.pub
zug/: any_state.hpp  compose.hpp  composed.hpp  into.hpp  into_vector.hpp  maybe_reduced.hpp  meta.hpp  reduce.hpp  reduce_nested.hpp  reductor.hpp  run.hpp  sequence.hpp  skip.hpp  state_traits.hpp  state_wrapper.hpp  transduce.hpp  tuplify.hpp  util.hpp  with_state.hpp
zug/compat/: apply.hpp  invoke.hpp
zug/detail/: copy_traits.hpp  empty_transducer_error.hpp  inline_constexpr.hpp  inline_var.hpp  is_non_empty.hpp  iterator_facade.hpp  iterator_range.hpp  lambda_wrapper.hpp  pipeable.hpp  reduce_nested_non_empty.hpp  reduce_nested_non_empty_accumulate.hpp  reduce_nested_non_empty_non_variadic.hpp  reduce_nested_non_empty_nullary.hpp  reduce_nested_non_empty_tail_recursive.hpp  reduce_nested_non_empty_variadic.hpp  transducer_holder.hpp  tuple_utils.hpp  unreachable.hpp
zug/meta/: common_type.hpp  detected.hpp  dispatch.hpp  pack.hpp  util.hpp  value_type.hpp
zug/reducing/: emplacing_back.hpp  first.hpp  first_rf.hpp  last.hpp  last_rf.hpp  output.hpp
zug/transducer/: cat.hpp  chain.hpp  count.hpp  cycle.hpp  dedupe.hpp  distinct.hpp  drop.hpp  drop_while.hpp  each.hpp  eager.hpp  enumerate.hpp  filter.hpp  interleave.hpp  interpose.hpp  iter.hpp  map.hpp  map_indexed.hpp  mapcat.hpp  partition.hpp  partition_by.hpp  product.hpp  random_sample.hpp  range.hpp  read.hpp  readbuf.hpp  remove.hpp  repeat.hpp  replace.hpp  scan.hpp  sink.hpp  take.hpp  take_nth.hpp  take_while.hpp  transducer.hpp  unzip.hpp  write.hpp  writebuf.hpp  zip.hpp
